# Etudes

./: README.md
CPP/ImJustLearningVS/: CMakeLists.txt  ImJustLearningVS.cpp  ImJustLearningVS.h
Golang/LearnGowebly/: .air.toml  Dockerfile  README.md  docker-compose.yml  go.mod  handlers.go  package.json  server.go  tailwind.config.js
Golang/LearnGowebly/assets/: scripts.js
Golang/LearnGowebly/templates/: main.templ
Golang/sampleProject/: go.mod
Golang/sampleProject/cmd/sampleProject/: main.go
Golang/sampleProject/internal/unnecessaryclass/: unnecessaryClass.go
JS_TS/Next/learn-nextjs/: package-lock.json  package.json
JS_TS/Next/learn-nextjs/prisma/: schema.prisma
JS_TS/Next/learn-nextjs/prisma/migrations/0_init/: migration.sql
JS_TS/Next/learn-nextjs/src/app/: layout.jsx  page.jsx
JS_TS/Next/learn-nextjs/src/app/api/: route.js
JS_TS/Next/learn-nextjs/src/app/api/testData/: route.js
JS_TS/Next/learn-nextjs/src/db/: database.db
JS_TS/T3/test-app/: drizzle.config.ts  package-lock.json  package.json
JS_TS/T3/test-app/src/server/db/: schema.ts
Math/Probability/: method_of_creating_new_distributions.ipynb  truncated_distribution.ipynb
Python/Design_Pattern_Sketch/: pipeline.py
Python/Numba/: learn_numba_CUDA.ipynb
Youtube/: pytude_download.ipynb
