# CMakeList.txt : CMake project for ImJustLearningVS, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ImJustLearningVS")

# Add source to this project's executable.
add_executable (ImJustLearningVS "ImJustLearningVS.cpp" "ImJustLearningVS.h")

# TODO: Add tests and install targets if needed.
